# parse_it

./: .gitignore  CMakeLists.txt  README.md
include/parse_it/: parser.h  parser_details.h  parser_types.h
include/parse_it/utils/: arithmetic.h  byte_litterals.h  utils.h
scripts/: build.py
tests/: CMakeLists.txt  byte_span_tests.cpp  byte_view_tests.cpp  doctest.h  parser_tests.cpp
tests/parser/: any_byte_tests.cpp  byte_seq_tests.cpp  combine_tests.cpp  fmap_tests.cpp  integral_tests.cpp  many_test.cpp  nbytes_tests.cpp  one_byte_tests.cpp  or_tests.cpp  skip_tests.cpp
